Fix some section padding on mobile

--- a/css/home.scss
+++ b/css/home.scss
@@ -656,7 +656,10 @@ permalink: /css/homestyle.css
 .segment__item--solution {
   justify-content: end;
   align-self: end;
-  padding: 0 1.8em 1.8em 0;
+  
+  @media (min-width: 768px) {
+    padding: 0 1.8em 1.8em 0;
+  }
 
   &:after {
     background-image: linear-gradient(150deg, transparent 70%, hsl(139, 36%, 25%) 100%);
